--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
             - name: Unit Tests
               run: yarn test --watchAll=false
             - name: E2E Tests 
-              uses: cypress.io/github-action@v3.0.3
+              uses: cypress-io/github-action@v3.0.3
               with:
                   start: yarn start
                   wait-on: 'http://localhost:3000'
